Super important commit

--- a/sandbox full of trash/PCA via gradient 2/5.4 small BN.ipynb
+++ b/sandbox full of trash/PCA via gradient 2/5.4 small BN.ipynb
@@ -285,11 +285,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 50,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-04-11T17:55:33.976286Z",
-     "start_time": "2019-04-11T17:55:33.946501Z"
+     "end_time": "2019-04-11T17:57:20.807488Z",
+     "start_time": "2019-04-11T17:57:20.778224Z"
     },
     "code_folding": [
      2,
@@ -345,14 +345,14 @@
     "        self.layerA= self.a * self.act(self.b * self.layer) + self.c\n",
     "        var = self.w.T @ self.input.T @ self.input @ self.w\n",
     "        return self.layerA,var\n",
-    "    def back_non(self,gradient):\n",
+    "    def back_non(self,gradient,sign_value=-1):\n",
     "        \n",
     "        grada = (gradient * self.act(self.b * self.layer)).mean(0)\n",
     "        gradb = (gradient * self.a * self.d_act(self.b * self.layer) * self.layer).mean(0)\n",
     "        gradc = gradient.mean(0)\n",
     "        \n",
-    "        gradw = self.input.T @(gradient * self.a * self.d_act(self.b * self.layer) * self.b) +2*self.input.T @ self.input @ self.w \n",
-    "        grad_pass = (gradient * self.a * self.d_act(self.b * self.layer) * self.b)  @ self.w.T +2*self.input   @ self.w     @ self.w.T\n",
+    "        gradw = self.input.T @(gradient * self.a * self.d_act(self.b * self.layer) * self.b) +sign_value*2*self.input.T @ self.input @ self.w \n",
+    "        grad_pass = (gradient * self.a * self.d_act(self.b * self.layer) * self.b)  @ self.w.T +sign_value*2*self.input   @ self.w     @ self.w.T\n",
     "        \n",
     "#         gradw = self.input.T @(gradient * self.a * self.d_act(self.b * self.layer) * self.b) \n",
     "#         grad_pass = (gradient * self.a * self.d_act(self.b * self.layer) * self.b)  @ self.w.T \n",
