Super important commit

--- a/sandbox full of trash/PCA via gradient 2/5.4 small BN.ipynb
+++ b/sandbox full of trash/PCA via gradient 2/5.4 small BN.ipynb
@@ -294,7 +294,6 @@
     "code_folding": [
      2,
      19,
-     34,
      77,
      87,
      89,
@@ -360,22 +359,22 @@
     "        self.ma   = beta1 * self.ma + (1-beta1) * grada\n",
     "        self.va   = beta2 * self.va + (1-beta2) * grada ** 2\n",
     "        adam_mida = (self.ma / (1-beta1)) * learning_rate/(np.sqrt(self.va/(1-beta2)) + adam_e)\n",
-    "        self.a    = self.stand(self.a - adam_mida)\n",
+    "        self.a    = self.stand(self.a - adam_mida)+ np.random.normal(0,1,size=self.a.shape)*cancel\n",
     "        \n",
     "        self.mb   = beta1 * self.mb + (1-beta1) * gradb\n",
     "        self.vb   = beta2 * self.vb + (1-beta2) * gradb ** 2\n",
     "        adam_midb = (self.mb / (1-beta1)) * learning_rate/(np.sqrt(self.vb/(1-beta2)) + adam_e)\n",
-    "        self.b    = self.stand(self.b - adam_midb)      \n",
+    "        self.b    = self.stand(self.b - adam_midb)+ np.random.normal(0,1,size=self.b.shape)*cancel      \n",
     "\n",
     "        self.mc   = beta1 * self.mc + (1-beta1) * gradc\n",
     "        self.vc   = beta2 * self.vc + (1-beta2) * gradc ** 2\n",
     "        adam_midc = (self.mc / (1-beta1)) * learning_rate/(np.sqrt(self.vc/(1-beta2)) + adam_e)\n",
-    "        self.c    = self.stand(self.c - adam_midc)\n",
+    "        self.c    = self.stand(self.c - adam_midc)+ np.random.normal(0,1,size=self.c.shape)*cancel\n",
     "        \n",
     "        self.mw   = beta1 * self.mw + (1-beta1) * gradw\n",
     "        self.vw   = beta2 * self.vw + (1-beta2) * gradw ** 2\n",
     "        adam_midw = (self.mw / (1-beta1)) * learning_rate/(np.sqrt(self.vw/(1-beta2)) + adam_e)\n",
-    "        self.w    = self.sym_decorrelation(self.w - adam_midw)\n",
+    "        self.w    = self.sym_decorrelation(self.w - adam_midw)+ np.random.normal(0,1,size=self.w.shape)*cancel\n",
     "        \n",
     "        return grad_pass\n",
     "    \n",
