--- a/sandbox full of trash/PCA via gradient 2/5.4 small BN.ipynb
+++ b/sandbox full of trash/PCA via gradient 2/5.4 small BN.ipynb
@@ -344,7 +344,7 @@
     "        self.layerA= self.a * self.act(self.b * self.layer) + self.c\n",
     "        var = self.w.T @ self.input.T @ self.input @ self.w\n",
     "        return self.layerA,var\n",
-    "    def back_non(self,gradient,cancel=0):\n",
+    "    def back_non(self,gradient,cancel=0,sign_value = 1):\n",
     "        \n",
     "        grada = (gradient * self.act(self.b * self.layer)).mean(0)\n",
     "        gradb = (gradient * self.a * self.d_act(self.b * self.layer) * self.layer).mean(0)\n",
