Super important commit

--- a/sandbox full of trash/PCA via gradient 2/5.4 small BN.ipynb
+++ b/sandbox full of trash/PCA via gradient 2/5.4 small BN.ipynb
@@ -469,20 +469,24 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2019-04-11T20:02:28.903Z"
-    }
+     "start_time": "2019-04-11T20:03:03.220Z"
+    },
+    "code_folding": [
+     38,
+     46
+    ]
    },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Iter: 314 98.629613114870816\r"
+      "Iter: 467 114.95769303729636\r"
      ]
     }
    ],
    "source": [
-    "learning_rate = 0.0000008; beta1=0.999; beta2=0.999; adam_e = 1e-8 \n",
+    "learning_rate = 0.0008; beta1=0.999; beta2=0.999; adam_e = 1e-8 \n",
     "\n",
     "l1 = PCA_layer(2,3)\n",
     "l1b= batch_norm()\n",
