Super important commit

--- a/sandbox full of trash/PCA via gradient 2/5.4 small BN.ipynb
+++ b/sandbox full of trash/PCA via gradient 2/5.4 small BN.ipynb
@@ -292,13 +292,12 @@
      "start_time": "2019-04-11T21:05:44.317624Z"
     },
     "code_folding": [
-     2,
      19,
-     77,
-     87,
-     89,
-     91,
-     119
+     78,
+     88,
+     90,
+     92,
+     120
     ]
    },
    "outputs": [],
@@ -308,12 +307,12 @@
     "    def __init__(self,inc,outc,act=g,d_act=g_grad):\n",
     "        self.w =self.sym_decorrelation(np.random.normal(size=(inc,outc)))\n",
     "\n",
-    "        self.a =self.stand(np.random.normal(size=(outc)))\n",
-    "        self.b =self.stand(np.random.normal(size=(outc)))\n",
+    "#         self.a =self.stand(np.random.normal(size=(outc)))\n",
+    "#         self.b =self.stand(np.random.normal(size=(outc)))\n",
     "        self.c =self.stand(np.random.normal(size=(outc)))\n",
-    "#         self.a =np.ones(outc)\n",
-    "#         self.b =np.ones(outc)\n",
-    "#         self.c =np.zeros(outc)\n",
+    "        self.a =np.ones(outc)\n",
+    "        self.b =np.ones(outc)\n",
+    "        self.c =np.zeros(outc)\n",
     "\n",
     "        self.act = act; self.d_act = d_act\n",
     "        \n",
@@ -5137,24 +5136,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 156,
+   "execution_count": 157,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-04-11T21:07:17.660023Z",
-     "start_time": "2019-04-11T21:07:17.634727Z"
+     "end_time": "2019-04-11T21:07:21.473000Z",
+     "start_time": "2019-04-11T21:07:21.467072Z"
     }
    },
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'a' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-156-3f786850e387>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0ma\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m: name 'a' is not defined"
-     ]
+     "data": {
+      "text/plain": [
+       "array([ 0.579, -0.929, -1.142,  0.967,  1.341,  0.457,  0.81 , -1.4  ])"
+      ]
+     },
+     "execution_count": 157,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
