Super important commit

--- a/sandbox full of trash/PCA via gradient 2/5.4 small BN.ipynb
+++ b/sandbox full of trash/PCA via gradient 2/5.4 small BN.ipynb
@@ -5136,27 +5136,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 157,
+   "execution_count": 160,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-04-11T21:07:21.473000Z",
-     "start_time": "2019-04-11T21:07:21.467072Z"
+     "end_time": "2019-04-11T21:08:34.315008Z",
+     "start_time": "2019-04-11T21:08:34.309539Z"
     }
    },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([ 0.579, -0.929, -1.142,  0.967,  1.341,  0.457,  0.81 , -1.4  ])"
+       "array([11092.757, 11091.78 , 11091.848, 11089.304, 11092.171, 11091.456,\n",
+       "       11092.05 , 11090.697])"
       ]
      },
-     "execution_count": 157,
+     "execution_count": 160,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "l1.a"
+    "l1.b"
    ]
   },
   {
