Super important commit

--- a/sandbox full of trash/PCA via gradient 2/5.4 small BN.ipynb
+++ b/sandbox full of trash/PCA via gradient 2/5.4 small BN.ipynb
@@ -285,11 +285,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 168,
+   "execution_count": 170,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-04-11T21:09:59.719132Z",
-     "start_time": "2019-04-11T21:09:59.684360Z"
+     "end_time": "2019-04-11T21:10:10.231270Z",
+     "start_time": "2019-04-11T21:10:10.198514Z"
     },
     "code_folding": [
      19,
@@ -464,11 +464,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 169,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-04-11T21:10:00.536985Z",
-     "start_time": "2019-04-11T21:10:00.498807Z"
+     "start_time": "2019-04-11T21:10:11.606Z"
     },
     "code_folding": [
      38,
@@ -477,14 +476,10 @@
    },
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "__init__() missing 1 required positional argument: 'outc'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-169-a179a3edf12c>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[0ml1\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mPCA_layer\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m2\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m3\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[0ml1b\u001b[0m\u001b[1;33m=\u001b[0m \u001b[0mbatch_norm\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 5\u001b[1;33m \u001b[0ml2\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mPCA_layer\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m3.3\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      6\u001b[0m \u001b[0ml2b\u001b[0m\u001b[1;33m=\u001b[0m \u001b[0mbatch_norm\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      7\u001b[0m \u001b[0ml3\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mPCA_layer\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m3\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m2\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mTypeError\u001b[0m: __init__() missing 1 required positional argument: 'outc'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Iter: 50 14.626962952990823\r"
      ]
     }
    ],
@@ -493,7 +488,7 @@
     "\n",
     "l1 = PCA_layer(2,3)\n",
     "l1b= batch_norm()\n",
-    "l2 = PCA_layer(3.3)\n",
+    "l2 = PCA_layer(3,3)\n",
     "l2b= batch_norm()\n",
     "l3 = PCA_layer(3,2)\n",
     "\n",
@@ -526,6 +521,26 @@
     "layer2,layer2_var = l2.feed_non(layer1bn,0)\n",
     "layer2bn = l2b.feed(layer2)\n",
     "layer3,layer3_var = l3.feed_linear(layer2bn)\n",
+    "\n",
+    "trace1 = go.Scatter3d(\n",
+    "    x=layer1bn[y==0,0],\n",
+    "    y=layer2bn[y==0,1],\n",
+    "    z=layer2bn[y==0,2],\n",
+    "    mode='markers',\n",
+    "    line=dict(color='red',width=0.5),\n",
+    "    marker=dict(size=3,opacity=0.3)\n",
+    ")\n",
+    "trace2 = go.Scatter3d(\n",
+    "    x=layer2bn[y==1,0],\n",
+    "    y=layer2bn[y==1,1],\n",
+    "    z=layer2bn[y==1,2],\n",
+    "    mode='markers',\n",
+    "    line=dict(color='blue',width=0.5),\n",
+    "    marker=dict(size=3,opacity=0.3)\n",
+    ")\n",
+    "data = [trace1,trace2]\n",
+    "fig  = go.Figure(data=data)\n",
+    "iplot(fig)\n",
     "\n",
     "trace1 = go.Scatter3d(\n",
     "    x=layer2bn[y==0,0],\n",
