Super important commit

--- a/sandbox full of trash/PCA via gradient 2/5.4 small BN.ipynb
+++ b/sandbox full of trash/PCA via gradient 2/5.4 small BN.ipynb
@@ -377,7 +377,7 @@
     "        \n",
     "        return grad_pass\n",
     "    \n",
-    "    def stand(self,a): return (a)/a.sum()\n",
+    "    def stand(self,a): return (a)/a.std()\n",
     "    def norm(self,w):  return w/(np.sqrt(np.sum(w**2)))\n",
     "    def sym_decorrelation(self,W):\n",
     "        \"\"\" Symmetric decorrelation\n",
@@ -9619,7 +9619,7 @@
     }
    ],
    "source": [
-    "learning_rate = 0.000008; beta1=0.999; beta2=0.999; adam_e = 1e-8 \n",
+    "learning_rate = 0.0008; beta1=0.999; beta2=0.999; adam_e = 1e-8 \n",
     "\n",
     "l1 = PCA_layer(2,3)\n",
     "l1b= batch_norm()\n",
