Super important commit

--- a/sandbox full of trash/PCA via gradient 2/5.4 small BN.ipynb
+++ b/sandbox full of trash/PCA via gradient 2/5.4 small BN.ipynb
@@ -9706,27 +9706,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 177,
+   "execution_count": 182,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-04-11T21:11:59.964482Z",
-     "start_time": "2019-04-11T21:11:59.959485Z"
+     "end_time": "2019-04-11T21:12:52.480492Z",
+     "start_time": "2019-04-11T21:12:52.475036Z"
     }
    },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([8.627e+08, 8.627e+08, 8.627e+08])"
+       "array([-0.116,  1.279, -1.162])"
       ]
      },
-     "execution_count": 177,
+     "execution_count": 182,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "l1.b"
+    "l1.c"
    ]
   },
   {
