--- a/sandbox full of trash/PCA via gradient 2/5.4 small BN.ipynb
+++ b/sandbox full of trash/PCA via gradient 2/5.4 small BN.ipynb
@@ -377,7 +377,7 @@
     "        \n",
     "        return grad_pass\n",
     "    \n",
-    "    def stand(self,a): return (a-a.mean(0))/a.std(0)\n",
+    "    def stand(self,a): return (10)*\n",
     "    def norm(self,w):  return w/(np.sqrt(np.sum(w**2)))\n",
     "    def sym_decorrelation(self,W):\n",
     "        \"\"\" Symmetric decorrelation\n",
