--- a/sandbox full of trash/PCA via gradient 2/5.4 small BN.ipynb
+++ b/sandbox full of trash/PCA via gradient 2/5.4 small BN.ipynb
@@ -310,8 +310,8 @@
     "#         self.a =self.stand(np.random.normal(size=(outc)))\n",
     "#         self.b =self.stand(np.random.normal(size=(outc)))\n",
     "#         self.c =self.stand(np.random.normal(size=(outc)))\n",
-    "        self.a =np.ones(outc)\n",
-    "        self.b =np.ones(outc)\n",
+    "        self.a =np.ones(outc)*10\n",
+    "        self.b =np.ones(outc)*10\n",
     "        self.c =np.zeros(outc)\n",
     "\n",
     "        self.act = act; self.d_act = d_act\n",
@@ -377,7 +377,7 @@
     "        \n",
     "        return grad_pass\n",
     "    \n",
-    "    def stand(self,a): return a/a.std()\n",
+    "    def stand(self,a): return a/a.s\n",
     "    def norm(self,w):  return w/(np.sqrt(np.sum(w**2)))\n",
     "    def sym_decorrelation(self,W):\n",
     "        \"\"\" Symmetric decorrelation\n",
