--- a/sandbox full of trash/PCA via gradient 2/5.4 small BN.ipynb
+++ b/sandbox full of trash/PCA via gradient 2/5.4 small BN.ipynb
@@ -307,12 +307,12 @@
     "    def __init__(self,inc,outc,act=g,d_act=g_grad):\n",
     "        self.w =self.sym_decorrelation(np.random.normal(size=(inc,outc)))\n",
     "\n",
-    "#         self.a =self.stand(np.random.normal(size=(outc)))\n",
-    "#         self.b =self.stand(np.random.normal(size=(outc)))\n",
-    "#         self.c =self.stand(np.random.normal(size=(outc)))\n",
-    "        self.a =np.ones(outc)*10\n",
-    "        self.b =np.ones(outc)*10\n",
-    "        self.c =np.zeros(outc)\n",
+    "        self.a =np.random.normal(size=(outc)))\n",
+    "        self.b =self.stand(np.random.normal(size=(outc)))\n",
+    "        self.c =self.stand(np.random.normal(size=(outc)))\n",
+    "#         self.a =np.ones(outc)*10\n",
+    "#         self.b =np.ones(outc)*10\n",
+    "#         self.c =np.zeros(outc)\n",
     "\n",
     "        self.act = act; self.d_act = d_act\n",
     "        \n",
