Super important commit

--- a/sandbox full of trash/PCA via gradient 2/5.4 small BN.ipynb
+++ b/sandbox full of trash/PCA via gradient 2/5.4 small BN.ipynb
@@ -280,7 +280,10 @@
     "def g(x) :     return np.arctan(x)\n",
     "def gg(x):     return np.tan(x)\n",
     "def g_grad(x): return 1/(1+x**2)\n",
-    "def gg_grad(x):return 1/(np.cos(x)*2+1e-8)"
+    "def gg_grad(x):return 1/(np.cos(x)*2+1e-8)\n",
+    "\n",
+    "def g(x) :     return 1/(1+np.exp(-x))\n",
+    "def \n"
    ]
   },
   {
