Super important commit

--- a/sandbox full of trash/PCA via gradient 2/5.4 small BN.ipynb
+++ b/sandbox full of trash/PCA via gradient 2/5.4 small BN.ipynb
@@ -282,7 +282,7 @@
     "# def g_grad(x): return 1/(1+x**2)\n",
     "def gg_grad(x):return 1/(np.cos(x)*2+1e-8)\n",
     "\n",
-    "def g(x) :     return 1/(1+np.exp(-x))\n",
+    "def g(x) :     return np.tanh(x)\n",
     "def g_grad(x): return g(x)*(1-g(x))\n"
    ]
   },
