Super important commit

--- a/sandbox full of trash/PCA via gradient 2/5.4 small BN.ipynb
+++ b/sandbox full of trash/PCA via gradient 2/5.4 small BN.ipynb
@@ -266,11 +266,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 217,
+   "execution_count": 221,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-04-11T21:24:02.353123Z",
-     "start_time": "2019-04-11T21:24:02.347665Z"
+     "end_time": "2019-04-11T21:25:14.190181Z",
+     "start_time": "2019-04-11T21:25:14.183732Z"
     },
     "code_folding": []
    },
@@ -283,7 +283,7 @@
     "def gg_grad(x):return 1/(np.cos(x)*2+1e-8)\n",
     "\n",
     "def g(x) :     return np.tanh(x)\n",
-    "def g_grad(x): return g(x)*(1-g(x))\n"
+    "def g_grad(x): return 1-np.tanh(x)**2\n"
    ]
   },
   {
@@ -330,8 +330,8 @@
     "        var = self.w.T @ self.input.T @ self.input @ self.w\n",
     "        return self.layer,var\n",
     "    def back_linear(self):\n",
-    "        gradw     = 2*self.input.T @ self.input @ self.w \n",
-    "        grad_pass = 2*self.input   @ self.w     @ self.w.T\n",
+    "        gradw     = -2*self.input.T @ self.input @ self.w \n",
+    "        grad_pass = -2*self.input   @ self.w     @ self.w.T\n",
     "        \n",
     "        self.mw   = beta1 * self.mw + (1-beta1) * gradw\n",
     "        self.vw   = beta2 * self.vw + (1-beta2) * gradw ** 2\n",
