Super important commit

--- a/sandbox full of trash/PCA via gradient 2/5.4 small BN.ipynb
+++ b/sandbox full of trash/PCA via gradient 2/5.4 small BN.ipynb
@@ -9720,15 +9720,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 224,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-04-11T21:08:41.046620Z",
-     "start_time": "2019-04-11T21:08:41.041658Z"
+     "end_time": "2019-04-11T21:26:31.694809Z",
+     "start_time": "2019-04-11T21:26:31.479378Z"
     }
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "from sklearn.manifold import Isomap\n",
+    "embedding = Isomap(n_components=2)"
+   ]
   },
   {
    "cell_type": "code",
