Super important commit

--- a/sandbox full of trash/PCA via gradient 2/5.4 small BN.ipynb
+++ b/sandbox full of trash/PCA via gradient 2/5.4 small BN.ipynb
@@ -9789,11 +9789,15 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "start_time": "2019-04-11T21:28:58.020Z"
+    }
+   },
    "outputs": [],
    "source": [
-    "from sklearn.manifold import LocallyLinearEmbedding\n",
-    "embedding = LocallyLinearEmbedding(n_components=2)\n",
+    "from sklearn.manifold import TSNE\n",
+    "embedding = TSNE(n_components=2)\n",
     "X_transformed = embedding.fit_transform(X)\n",
     "\n",
     "plt.figure(figsize=(8,6))\n",
