Super important commit

--- a/sandbox full of trash/PCA via gradient 2/5.4 small BN.ipynb
+++ b/sandbox full of trash/PCA via gradient 2/5.4 small BN.ipynb
@@ -9902,6 +9902,8 @@
     "    print(\"%s: %.2g sec\" % (methods[i], t1 - t0))\n",
     "\n",
     "    ax = fig.add_subplot(252 + i)\n",
+    "    plt.scatter(X_transformed[y==0, 0], X_transformed[y==0, 1], color='red', alpha=0.5)\n",
+    "plt.scatter(X_transformed[y==1, 0], X_transformed[y==1, 1], color='blue', alpha=0.5)\n",
     "    plt.scatter(Y[:, 0], Y[:, 1], c=color, cmap=plt.cm.Spectral)\n",
     "    plt.title(\"%s (%.2g sec)\" % (labels[i], t1 - t0))\n",
     "    ax.xaxis.set_major_formatter(NullFormatter())\n",
