Super important commit

--- a/sandbox full of trash/PCA via gradient 2/5.4 small BN.ipynb
+++ b/sandbox full of trash/PCA via gradient 2/5.4 small BN.ipynb
@@ -308,13 +308,14 @@
     "class PCA_layer():\n",
     "\n",
     "    def __init__(self,inc,outc,act=g,d_act=g_grad):\n",
+    "        \n",
     "        self.w =self.sym_decorrelation(np.random.normal(size=(inc,outc)))\n",
-    "\n",
     "        self.a =np.random.normal(size=(outc))\n",
     "        self.b =np.random.normal(size=(outc))\n",
     "        self.c =np.random.normal(size=(outc))\n",
-    "#         self.a =np.ones(outc)*10\n",
-    "#         self.b =np.ones(outc)*10\n",
+    "        \n",
+    "#         self.a =np.ones(outc)\n",
+    "#         self.b =np.ones(outc)\n",
     "#         self.c =np.zeros(outc)\n",
     "\n",
     "        self.act = act; self.d_act = d_act\n",
