Super important commit

--- a/sandbox full of trash/PCA via gradient 2/5.4 small BN.ipynb
+++ b/sandbox full of trash/PCA via gradient 2/5.4 small BN.ipynb
@@ -479,7 +479,15 @@
      66
     ]
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Iter: 71 30.839392415763147\r"
+     ]
+    }
+   ],
    "source": [
     "learning_rate = 0.008; beta1=0.999; beta2=0.999; adam_e = 1e-8 \n",
     "\n",
