--- a/sandbox full of trash/PCA via gradient 2/5.4 small BN.ipynb
+++ b/sandbox full of trash/PCA via gradient 2/5.4 small BN.ipynb
@@ -272,7 +272,10 @@
      "end_time": "2019-04-11T21:36:42.451763Z",
      "start_time": "2019-04-11T21:36:42.447777Z"
     },
-    "code_folding": []
+    "code_folding": [
+     98,
+     126
+    ]
    },
    "outputs": [],
    "source": [
@@ -280,7 +283,167 @@
     "def g(x) :     return np.arctan(x)\n",
     "def gg(x):     return np.tan(x)\n",
     "def g_grad(x): return 1/(1+x**2)\n",
-    "def gg_grad(x):return 1/(np.cos(x)*2+1e-8)"
+    "def gg_grad(x):return 1/(np.cos(x)*2+1e-8)\n",
+    "\n",
+    "class PCA_layer():\n",
+    "\n",
+    "    def __init__(self,inc,outc,act=g,d_act=g_grad):\n",
+    "        \n",
+    "        self.w =self.sym_decorrelation(np.random.normal(size=(inc,outc)))\n",
+    "        self.a =np.random.normal(size=(outc))\n",
+    "        self.b =np.random.normal(size=(outc))\n",
+    "        self.c =np.random.normal(size=(outc))\n",
+    "        \n",
+    "#         self.a =np.ones(outc)\n",
+    "#         self.b =np.ones(outc)\n",
+    "#         self.c =np.zeros(outc)\n",
+    "\n",
+    "        self.act = act; self.d_act = d_act\n",
+    "        \n",
+    "        self.mw,self.vw = np.zeros_like(self.w),np.zeros_like(self.w)\n",
+    "        self.ma,self.va = np.zeros_like(self.a),np.zeros_like(self.a)\n",
+    "        self.mb,self.vb = np.zeros_like(self.b),np.zeros_like(self.b)\n",
+    "        self.mc,self.vc = np.zeros_like(self.c),np.zeros_like(self.c) \n",
+    "    \n",
+    "    def feed_linear(self,input_value):\n",
+    "        self.input = input_value\n",
+    "        self.layer = self.input @ self.w\n",
+    "        var = self.w.T @ self.input.T @ self.input @ self.w\n",
+    "        return self.layer,var\n",
+    "    def back_linear(self):\n",
+    "        gradw     = 2*self.input.T @ self.input @ self.w \n",
+    "        grad_pass = 2*self.input   @ self.w     @ self.w.T\n",
+    "        \n",
+    "        self.mw   = beta1 * self.mw + (1-beta1) * gradw\n",
+    "        self.vw   = beta2 * self.vw + (1-beta2) * gradw ** 2\n",
+    "        adam_midw = (self.mw / (1-beta1)) * learning_rate/(np.sqrt(self.vw/(1-beta2)) + adam_e)\n",
+    "        self.w    = self.sym_decorrelation(self.w - adam_midw) \n",
+    "        return grad_pass\n",
+    "        \n",
+    "    def feed_non(self,input_value,cancel=0):\n",
+    "        self.input = input_value\n",
+    "        self.layer = self.input @ self.w\n",
+    "        self.layer = self.layer  + np.random.normal(0,1,size=self.layer.shape)*cancel\n",
+    "        self.layerA= self.a * self.act(self.b * self.layer) + self.c\n",
+    "        var = self.w.T @ self.input.T @ self.input @ self.w\n",
+    "        return self.layerA,var\n",
+    "    def back_non(self,gradient,cancel=0,sign_value = -1):\n",
+    "        \n",
+    "        grada = (gradient * self.act(self.b * self.layer)).mean(0)\n",
+    "        gradb = (gradient * self.a * self.d_act(self.b * self.layer) * self.layer).mean(0)\n",
+    "        gradc = gradient.mean(0)\n",
+    "        \n",
+    "#         gradw = self.input.T @(gradient * self.a * self.d_act(self.b * self.layer) * self.b)   + sign_value*2*self.input.T @ self.input @ self.w \n",
+    "#         grad_pass = (gradient * self.a * self.d_act(self.b * self.layer) * self.b)  @ self.w.T + sign_value*2*self.input   @ self.w     @ self.w.T\n",
+    "        \n",
+    "        gradw = self.input.T @(gradient * self.a * self.d_act(self.b * self.layer) * self.b) \n",
+    "        grad_pass = (gradient * self.a * self.d_act(self.b * self.layer) * self.b)  @ self.w.T \n",
+    "        \n",
+    "        self.ma   = beta1 * self.ma + (1-beta1) * grada\n",
+    "        self.va   = beta2 * self.va + (1-beta2) * grada ** 2\n",
+    "        adam_mida = (self.ma / (1-beta1)) * learning_rate/(np.sqrt(self.va/(1-beta2)) + adam_e)\n",
+    "        self.a    = self.stand(self.a - adam_mida)+ np.random.normal(0,1,size=self.a.shape)*cancel\n",
+    "        \n",
+    "        self.mb   = beta1 * self.mb + (1-beta1) * gradb\n",
+    "        self.vb   = beta2 * self.vb + (1-beta2) * gradb ** 2\n",
+    "        adam_midb = (self.mb / (1-beta1)) * learning_rate/(np.sqrt(self.vb/(1-beta2)) + adam_e)\n",
+    "        self.b    = self.stand(self.b - adam_midb)+ np.random.normal(0,1,size=self.b.shape)*cancel      \n",
+    "\n",
+    "        self.mc   = beta1 * self.mc + (1-beta1) * gradc\n",
+    "        self.vc   = beta2 * self.vc + (1-beta2) * gradc ** 2\n",
+    "        adam_midc = (self.mc / (1-beta1)) * learning_rate/(np.sqrt(self.vc/(1-beta2)) + adam_e)\n",
+    "        self.c    = self.stand(self.c - adam_midc)+ np.random.normal(0,1,size=self.c.shape)*cancel\n",
+    "        \n",
+    "        self.mw   = beta1 * self.mw + (1-beta1) * gradw\n",
+    "        self.vw   = beta2 * self.vw + (1-beta2) * gradw ** 2\n",
+    "        adam_midw = (self.mw / (1-beta1)) * learning_rate/(np.sqrt(self.vw/(1-beta2)) + adam_e)\n",
+    "        self.w    = self.sym_decorrelation(self.w - adam_midw)+ np.random.normal(0,1,size=self.w.shape)*cancel\n",
+    "        \n",
+    "        return grad_pass\n",
+    "    \n",
+    "    def stand(self,a): return (a-a.mean())/a.std()\n",
+    "    def norm(self,w):  return w/(np.sqrt(np.sum(w**2)))\n",
+    "    def sym_decorrelation(self,W):\n",
+    "        \"\"\" Symmetric decorrelation\n",
+    "        i.e. W <- (W * W.T) ^{-1/2} * W\n",
+    "        \"\"\"\n",
+    "        s, u = np.linalg.eigh(np.dot(W, W.T))\n",
+    "        # u (resp. s) contains the eigenvectors (resp. square roots of\n",
+    "        # the eigenvalues) of W * W.T\n",
+    "        return np.dot(np.dot(u * (1./(np.sqrt(s+1e-8)+1e-8)), u.T), W)\n",
+    "    \n",
+    "# need to fix this later\n",
+    "class batch_norm():\n",
+    "    \n",
+    "    def __init__(self):\n",
+    "        pass\n",
+    "    def feed(self,x,eps=1e-8):\n",
+    "        \n",
+    "        N, D = x.shape\n",
+    "\n",
+    "        #step1: calculate mean\n",
+    "        mu = 1./N * np.sum(x, axis = 0)\n",
+    "\n",
+    "        #step2: subtract mean vector of every trainings example\n",
+    "        xmu = x - mu\n",
+    "\n",
+    "        #step3: following the lower branch - calculation denominator\n",
+    "        sq = xmu ** 2\n",
+    "\n",
+    "        #step4: calculate variance\n",
+    "        var = 1./N * np.sum(sq, axis = 0)\n",
+    "\n",
+    "        #step5: add eps for numerical stability, then sqrt\n",
+    "        sqrtvar = np.sqrt(var + eps)\n",
+    "\n",
+    "        #step6: invert sqrtwar\n",
+    "        ivar = 1./sqrtvar\n",
+    "\n",
+    "        #step7: execute normalization\n",
+    "        xhat = xmu * ivar\n",
+    "\n",
+    "        self.cache = (xhat,xmu,ivar,sqrtvar,var)\n",
+    "\n",
+    "        return xhat\n",
+    "    def back(self,dout,eps=1e-8):\n",
+    "        xhat,xmu,ivar,sqrtvar,var = self.cache\n",
+    "        \n",
+    "        #get the dimensions of the input/output\n",
+    "        N,D = dout.shape\n",
+    "\n",
+    "        #step9\n",
+    "        dgammax = dout #not necessary, but more understandable\n",
+    "\n",
+    "        #step8\n",
+    "        dxhat = dgammax \n",
+    "\n",
+    "        #step7\n",
+    "        divar = np.sum(dxhat*xmu, axis=0)\n",
+    "        dxmu1 = dxhat * ivar\n",
+    "\n",
+    "        #step6\n",
+    "        dsqrtvar = -1. /(sqrtvar**2) * divar\n",
+    "\n",
+    "        #step5\n",
+    "        dvar = 0.5 * 1. /np.sqrt(var+eps) * dsqrtvar\n",
+    "\n",
+    "        #step4\n",
+    "        dsq = 1. /N * np.ones((N,D)) * dvar\n",
+    "\n",
+    "        #step3\n",
+    "        dxmu2 = 2 * xmu * dsq\n",
+    "\n",
+    "        #step2\n",
+    "        dx1 = (dxmu1 + dxmu2)\n",
+    "        dmu = -1 * np.sum(dxmu1+dxmu2, axis=0)\n",
+    "\n",
+    "        #step1\n",
+    "        dx2 = 1. /N * np.ones((N,D)) * dmu\n",
+    "\n",
+    "        #step0\n",
+    "        dx = dx1 + dx2\n",
+    "\n",
+    "        return dx"
    ]
   },
   {
