Super important commit

--- a/sandbox full of trash/PCA via gradient 2/8. focus.ipynb
+++ b/sandbox full of trash/PCA via gradient 2/8. focus.ipynb
@@ -9443,8 +9443,8 @@
     "        sys.stdout.write(\"Iter: \" + str(iter) + \" \" + str(layer1_var.mean() + layer2_var.mean() + layer3_var.mean()) + '\\r'); sys.stdout.flush()\n",
     "        \n",
     "        grad3   = l3.back_linear()\n",
-    "        grad2   = l2.back_non(grad3,cancel=1,sign_value=1)\n",
-    "        grad1   = l1.back_non(grad2,cancel=1,sign_value=1)\n",
+    "        grad2   = l2.back_non(grad3,cancel=1/(iter+1),sign_value=1)\n",
+    "        grad1   = l1.back_non(grad2,cancel=1/(iter+1),sign_value=1)\n",
     "   \n",
     "layer1,layer1_var = l1.feed_non(X,0)\n",
     "layer2,layer2_var = l2.feed_non(layer1,0)\n",
