Super important commit

--- a/sandbox full of trash/PCA via gradient 2/8. focus.ipynb
+++ b/sandbox full of trash/PCA via gradient 2/8. focus.ipynb
@@ -270,7 +270,7 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2019-04-11T21:57:16.009Z"
+     "start_time": "2019-04-11T21:57:43.844Z"
     },
     "code_folding": [
      30,
@@ -284,12 +284,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Iter: 0 180.50259098829661\r"
+      "Iter: 19 4282.3576754188748\r"
      ]
     }
    ],
    "source": [
-    "learning_rate = 0.0008; beta1=0.9; beta2=0.999; adam_e = 1e-8 \n",
+    "learning_rate = 0.0000000008; beta1=0.9; beta2=0.999; adam_e = 1e-8 \n",
     "\n",
     "l1 = PCA_layer(2,3);  l1b= batch_norm()\n",
     "l2 = PCA_layer(3,3);  l2b= batch_norm()\n",
