Super important commit

--- a/sandbox full of trash/PCA via gradient 2/8. focus.ipynb
+++ b/sandbox full of trash/PCA via gradient 2/8. focus.ipynb
@@ -180,8 +180,8 @@
     "        \n",
     "        return grad_pass\n",
     "    \n",
-    "    def stand(self,a): return a\n",
-    "    def norm(self,w):  return w/(np.sqrt(np.sum(w**2)))\n",
+    "#     def stand(self,a): return a\n",
+    "    def stand(self,w):  return w/(np.sqrt(np.sum(w**2)))\n",
     "    def sym_decorrelation(self,W):\n",
     "        \"\"\" Symmetric decorrelation\n",
     "        i.e. W <- (W * W.T) ^{-1/2} * W\n",
@@ -284,7 +284,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Iter: 19 4282.3576754188748\r"
+      "Iter: 86 2381.0275668655427\r"
      ]
     }
    ],
