Super important commit

--- a/sandbox full of trash/PCA via gradient 2/8. focus.ipynb
+++ b/sandbox full of trash/PCA via gradient 2/8. focus.ipynb
@@ -86,11 +86,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 56,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-04-11T22:02:41.019472Z",
-     "start_time": "2019-04-11T22:02:40.985616Z"
+     "end_time": "2019-04-11T22:03:41.126554Z",
+     "start_time": "2019-04-11T22:03:41.095834Z"
     },
     "code_folding": [
      21,
@@ -180,7 +180,7 @@
     "        \n",
     "        return grad_pass\n",
     "    \n",
-    "    def stand(self,a): return (a-a.mean())/a.std()\n",
+    "    def stand(self,a): return a\n",
     "#     def stand(self,w):  return w/(np.sqrt(np.sum(w**2)))\n",
     "    def sym_decorrelation(self,W):\n",
     "        \"\"\" Symmetric decorrelation\n",
@@ -270,7 +270,7 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2019-04-11T22:02:41.652Z"
+     "start_time": "2019-04-11T22:03:41.468Z"
     },
     "code_folding": [
      30,
@@ -284,12 +284,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Iter: 2 99.536731354072598\r"
+      "Iter: 36 27739.571162829012\r"
      ]
     }
    ],
    "source": [
-    "learning_rate = 0.0008; beta1=0.9; beta2=0.999; adam_e = 1e-8 \n",
+    "learning_rate = 0.000000008; beta1=0.9; beta2=0.999; adam_e = 1e-8 \n",
     "\n",
     "l1 = PCA_layer(2,3);  l1b= batch_norm()\n",
     "l2 = PCA_layer(3,3);  l2b= batch_norm()\n",
