Super important commit

--- a/sandbox full of trash/PCA via gradient 2/8. focus.ipynb
+++ b/sandbox full of trash/PCA via gradient 2/8. focus.ipynb
@@ -4817,10 +4817,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 107,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-04-12T11:34:08.164972Z",
+     "start_time": "2019-04-12T11:34:08.161024Z"
+    }
+   },
    "outputs": [],
-   "source": []
+   "source": [
+    "temp_grad = np.ones_like(temp)\n",
+    "\n",
+    "evalue, evector = np.linalg.eigh(weight@weight.T)\n",
+    "# E = ones(N,1)*D'- D*ones(1,N);\n",
+    "E = \n"
+   ]
   },
   {
    "cell_type": "code",
