--- a/sandbox full of trash/PCA via gradient 2/8. focus.ipynb
+++ b/sandbox full of trash/PCA via gradient 2/8. focus.ipynb
@@ -4817,20 +4817,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 111,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-04-12T11:34:08.164972Z",
-     "start_time": "2019-04-12T11:34:08.161024Z"
+     "end_time": "2019-04-12T11:34:59.117656Z",
+     "start_time": "2019-04-12T11:34:59.110709Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[-1.  3.]\n",
+      "[[-0.707 -0.707]\n",
+      " [-0.707  0.707]]\n"
+     ]
+    }
+   ],
    "source": [
     "temp_grad = np.ones_like(temp)\n",
     "\n",
-    "evalue, evector = np.linalg.eigh(weight@weight.T)\n",
+    "evalue, evector = np.linalg.eigh(np.array([[1,-2],[-2,1]]))\n",
+    "print(evalue)\n",
+    "print(evector)\n",
+    "\n",
     "# E = ones(N,1)*D'- D*ones(1,N);\n",
-    "E = \n"
+    "# E = \n"
    ]
   },
   {
