Super important commit

--- a/sandbox full of trash/PCA via gradient 2/8. focus.ipynb
+++ b/sandbox full of trash/PCA via gradient 2/8. focus.ipynb
@@ -4842,6 +4842,9 @@
     "print(evalue)\n",
     "print(evector)\n",
     "\n",
+    "U = evector\n",
+    "D = evalue\n",
+    "\n",
     "# E = ones(N,1)*D'- D*ones(1,N);\n",
     "# E = \n"
    ]
