--- a/sandbox full of trash/PCA via gradient 2/8. focus.ipynb
+++ b/sandbox full of trash/PCA via gradient 2/8. focus.ipynb
@@ -4817,11 +4817,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 118,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-04-12T11:38:16.948999Z",
-     "start_time": "2019-04-12T11:38:16.923193Z"
+     "end_time": "2019-04-12T11:39:00.227790Z",
+     "start_time": "2019-04-12T11:39:00.216889Z"
     }
    },
    "outputs": [
@@ -4831,18 +4831,11 @@
      "text": [
       "[-1.  3.]\n",
       "[[-0.707 -0.707]\n",
-      " [-0.707  0.707]]\n"
-     ]
-    },
-    {
-     "ename": "ValueError",
-     "evalue": "shapes (2,1) and (2,) not aligned: 1 (dim 1) != 2 (dim 0)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-114-e130fa254a50>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      8\u001b[0m \u001b[0mD\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mevalue\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      9\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 10\u001b[1;33m \u001b[0mE\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mones\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m2\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;33m@\u001b[0m \u001b[0mD\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mT\u001b[0m \u001b[1;33m-\u001b[0m \u001b[0mD\u001b[0m \u001b[1;33m@\u001b[0m \u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mones\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m2\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     11\u001b[0m \u001b[1;31m# E =\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mValueError\u001b[0m: shapes (2,1) and (2,) not aligned: 1 (dim 1) != 2 (dim 0)"
+      " [-0.707  0.707]]\n",
+      "[[ 0.  4.]\n",
+      " [-4.  0.]]\n",
+      "[[ 0.    0.25]\n",
+      " [-0.25  0.  ]]\n"
      ]
     }
    ],
@@ -4856,8 +4849,10 @@
     "U = evector\n",
     "D = evalue\n",
     "\n",
-    "E = np.ones((2,1)) @ D[None,:].T - D @ np.ones((1,2))\n",
-    "# E = \n"
+    "E = np.ones((2,1)) @ D[None,:] - D[:,None] @ np.ones((1,2))\n",
+    "print(E)\n",
+    "F = 1./(E+np.eye(2)) - np.eye(2)\n",
+    "print(F)"
    ]
   },
   {
