Super important commit

--- a/sandbox full of trash/PCA via gradient 2/8. focus.ipynb
+++ b/sandbox full of trash/PCA via gradient 2/8. focus.ipynb
@@ -4817,11 +4817,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 121,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-04-12T11:39:00.227790Z",
-     "start_time": "2019-04-12T11:39:00.216889Z"
+     "end_time": "2019-04-12T11:43:06.102746Z",
+     "start_time": "2019-04-12T11:43:06.091307Z"
     }
    },
    "outputs": [
@@ -4832,8 +4832,6 @@
       "[-1.  3.]\n",
       "[[-0.707 -0.707]\n",
       " [-0.707  0.707]]\n",
-      "[[ 0.  4.]\n",
-      " [-4.  0.]]\n",
       "[[ 0.    0.25]\n",
       " [-0.25  0.  ]]\n"
      ]
@@ -4842,7 +4840,8 @@
    "source": [
     "temp_grad = np.ones_like(temp)\n",
     "\n",
-    "evalue, evector = np.linalg.eigh(np.array([[1,-2],[-2,1]]))\n",
+    "dddd =np.array([[1,-2],[-2,1]])\n",
+    "evalue, evector = np.linalg.eigh(dddd)\n",
     "print(evalue)\n",
     "print(evector)\n",
     "\n",
@@ -4852,6 +4851,10 @@
     "E = np.ones((2,1)) @ D[None,:] - D[:,None] @ np.ones((1,2))\n",
     "F = 1./(E+np.eye(2)) - np.eye(2)\n",
     "\n",
+    "dU = np.ones_like(U)\n",
+    "dD = np.ones_like(D)\n",
+    "\n",
+    "DA = evector.T @ () @ evector.T\n",
     "\n",
     "print(F)"
    ]
