Super important commit

--- a/sandbox full of trash/PCA via gradient 2/8. focus.ipynb
+++ b/sandbox full of trash/PCA via gradient 2/8. focus.ipynb
@@ -4817,11 +4817,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 127,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-04-12T11:43:06.102746Z",
-     "start_time": "2019-04-12T11:43:06.091307Z"
+     "end_time": "2019-04-12T11:45:26.149807Z",
+     "start_time": "2019-04-12T11:45:26.141377Z"
     }
    },
    "outputs": [
@@ -4832,8 +4832,8 @@
       "[-1.  3.]\n",
       "[[-0.707 -0.707]\n",
       " [-0.707  0.707]]\n",
-      "[[ 0.    0.25]\n",
-      " [-0.25  0.  ]]\n"
+      "[[ 0.823  0.177]\n",
+      " [-0.177  1.177]]\n"
      ]
     }
    ],
@@ -4854,9 +4854,8 @@
     "dU = np.ones_like(U)\n",
     "dD = np.ones_like(D)\n",
     "\n",
-    "DA = evector.T @ () @ evector.T\n",
-    "\n",
-    "print(F)"
+    "DA = np.linalg.inv(evector).T @ (np.diag(dD) + F * (evector.T @ dU)) @ evector.T\n",
+    "print(DA)"
    ]
   },
   {
@@ -4864,8 +4863,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-04-12T10:41:03.243373Z",
-     "start_time": "2019-04-12T10:41:03.236417Z"
+     "end_time": "2019-04-12T11:45:02.964222Z",
+     "start_time": "2019-04-12T11:45:02.959758Z"
     }
    },
    "outputs": [],
