Super important commit

--- a/sandbox full of trash/PCA via gradient 2/8. focus.ipynb
+++ b/sandbox full of trash/PCA via gradient 2/8. focus.ipynb
@@ -4763,6 +4763,55 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "# simple\n",
+    "w = np.random.randn(2,3)\n",
+    "\n",
+    "def _sym_decorrelation(W):\n",
+    "    \"\"\" Symmetric decorrelation\n",
+    "    i.e. W <- (W * W.T) ^{-1/2} * W\n",
+    "    \"\"\"\n",
+    "    s, u = np.linalg.eigh(np.dot(W, W.T))\n",
+    "    # u (resp. s) contains the eigenvectors (resp. square roots of\n",
+    "    # the eigenvalues) of W * W.T\n",
+    "    return np.dot(np.dot(u * (1. / np.sqrt(s+1e-8)), u.T), W)\n",
+    "w    = _sym_decorrelation(w)\n",
+    "\n",
+    "for _ in range(100):\n",
+    "    for current_batch_index in range(0,len(X),100):\n",
+    "        x_mini = X[current_batch_index:current_batch_index+100]\n",
+    "        x_mini = x_mini + np.random.normal(size=x_mini.shape)*10\n",
+    "        w = w - 0.000001 * -2 * x_mini.T @ x_mini @ w\n",
+    "        w = _sym_decorrelation(w)\n",
+    "        #print(w)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   },
   {
