--- a/sandbox full of trash/PCA via gradient 2/8. focus.ipynb
+++ b/sandbox full of trash/PCA via gradient 2/8. focus.ipynb
@@ -4775,7 +4775,6 @@
     "    # u (resp. s) contains the eigenvectors (resp. square roots of\n",
     "    # the eigenvalues) of W * W.T\n",
     "    return np.dot(np.dot(u * (1. / np.sqrt(s+1e-8)), u.T), W)\n",
-    "w    = _sym_decorrelation(w)\n",
     "\n",
     "for _ in range(100):\n",
     "    for current_batch_index in range(0,len(X),100):\n",
@@ -4783,7 +4782,8 @@
     "        \n",
     "        w_prime = _sym_decorrelation(w)\n",
     "        \n",
-    "        gradw = \n",
+    "        gradw  = -2 * x_mini.T @ x_mini @ w_prime\n",
+    "        gradww = \n",
     "        w = w - 0.000001 * -2 * x_mini.T @ x_mini @ w_prime\n",
     "        w = _sym_decorrelation(w)\n",
     "        #print(w)"
