Super important commit

--- a/sandbox full of trash/PCA via gradient 2/8. focus.ipynb
+++ b/sandbox full of trash/PCA via gradient 2/8. focus.ipynb
@@ -4760,11 +4760,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 131,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-04-12T11:52:24.539155Z",
-     "start_time": "2019-04-12T11:52:24.528739Z"
+     "end_time": "2019-04-12T11:54:29.924405Z",
+     "start_time": "2019-04-12T11:54:29.911526Z"
     }
    },
    "outputs": [
@@ -4772,8 +4772,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[ 1. -0.]\n",
-      " [-0.  1.]]\n"
+      "[[1. 0.]\n",
+      " [0. 1.]]\n"
      ]
     },
     {
@@ -4783,16 +4783,6 @@
      "traceback": [
       "An exception has occurred, use %tb to see the full traceback.\n",
       "\u001b[1;31mSystemExit\u001b[0m\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\ProgramData\\Miniconda3\\lib\\site-packages\\IPython\\core\\interactiveshell.py:3275: UserWarning:\n",
-      "\n",
-      "To exit: use 'exit', 'quit', or Ctrl-D.\n",
-      "\n"
      ]
     }
    ],
@@ -4818,12 +4808,9 @@
     "        one   = evector * (1./np.sqrt(evalue+1e-8))\n",
     "        two   = one @ evector.T\n",
     "        three = two @ w\n",
-    "        print(three@three.T)\n",
-    "        sys\n",
     "        \n",
-    "        w_prime,evalue,evector  = sym_decorrelation(w)\n",
-    "        gradw  = -2 * x_mini.T @ x_mini @ w_prime\n",
-    "        gradww = \n",
+    "        gradw  = -2 * x_mini.T @ x_mini @ three\n",
+    "#         gradww = \n",
     "        w = w - 0.000001 * -2 * x_mini.T @ x_mini @ w_prime\n",
     "        w = _sym_decorrelation(w)\n",
     "        #print(w)"
