Super important commit

--- a/sandbox full of trash/PCA via gradient 2/8. focus.ipynb
+++ b/sandbox full of trash/PCA via gradient 2/8. focus.ipynb
@@ -4760,22 +4760,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 132,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-04-12T11:54:29.924405Z",
-     "start_time": "2019-04-12T11:54:29.911526Z"
+     "end_time": "2019-04-12T11:56:22.721349Z",
+     "start_time": "2019-04-12T11:56:22.711403Z"
     }
    },
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[1. 0.]\n",
-      " [0. 1.]]\n"
-     ]
-    },
     {
      "ename": "SystemExit",
      "evalue": "",
@@ -4813,6 +4805,8 @@
     "        grad_two    = grad_three @ w.T\n",
     "        grad_one    = grad_two @ evector\n",
     "        grad_val    = evector * grad_one * (-1/2) * (evalue+1e-8) **(-3/2)\n",
+    "        print\n",
+    "        sys.exit()\n",
     "#         gradww = \n",
     "        w = w - 0.000001 * -2 * x_mini.T @ x_mini @ w_prime\n",
     "        w = _sym_decorrelation(w)\n",
